Fix margins and spacing for category list in admin page (#200)

--- a/src/components/AdminPage/AdminPage.module.css
+++ b/src/components/AdminPage/AdminPage.module.css
@@ -3,7 +3,8 @@
   grid-template-columns: auto auto;
   position: absolute;
   width: 100%;
-  height:100%; 
+  height:100%;
   z-index: 0;
   overflow: auto;
+  padding: 15px 0 0 10px;
 }
